# LiveTranslate

./: .gitignore  CLAUDE.md  README.md  README_zh.md  REMOTE_ASR.md  asr_anime_whisper.py  asr_client.py  asr_crispasr.py  asr_engine.py  asr_funasr.py  asr_funasr_nano.py  asr_parakeet_cpp.py  asr_remote.py  asr_sensevoice.py  asr_server.py  asr_service.py  asr_sherpa_onnx.py  asr_worker.py  audio_capture.py  build_release.ps1  config.yaml  control_panel.py  dialogs.py  install.ps1  log_window.py  main.py  model_manager.py  pipeline_controller.py  pyproject.toml  requirements.txt  settings_store.py  subtitle_overlay.py  subtitle_settings.py  subtitle_window.py  translator.py  update.bat  vad_firered.py  vad_processor.py
.github/workflows/: release.yml
i18n/: CHANGELOG_en.md  CHANGELOG_zh.md  en.yaml  zh.yaml
