[project]
name = "livetranslate"
version = "0.1.0"
description = "Real-time speech recognition and translation overlay."
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.24.0",
    "PyYAML>=6.0",
    "httpx>=0.28.0",
    "openai>=1.0.0",
    "psutil>=5.9.0",
    "PyAudioWPatch>=0.2.12",
    "faster-whisper>=1.0.0",
    "crispasr @ https://github.com/CrispStrobe/CrispASR/archive/refs/tags/v0.7.2.zip#subdirectory=python",
    "editdistance-s>=1.0.0",
    "omegaconf>=2.3.0",
    "kaldiio>=2.18.0",
    "torch-complex>=0.4.0",
    "soundfile>=0.12.0",
    "librosa>=0.10.0",
    "jaconv>=0.3.0",
    "jamo>=0.4.1",
    "hydra-core>=1.3.0",
    "six>=1.16.0",
    "sentencepiece>=0.2.0",
    "tiktoken>=0.7.0",
    "transformers>=4.40.0",
    "silero-vad>=5.0",
    "modelscope>=1.20.0",
    "huggingface_hub>=0.20.0",
    "PyQt6>=6.5.0",
    "pysbd",
]

[tool.uv]
package = false
